--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -21,5 +29,13 @@
     "mongoose": "^6.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/jest": "^28.1.3",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.1",
+    "mongodb-memory-server": "^8.7.1",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5"
   }
 }
