--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -22,5 +22,5 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: "**/*.js"
+          - src: '**/*.js'
             dest: .
